# MaterialAllocator_RL

./: README.md  pyproject.toml  requirements.txt
data/outputs/benchmarks/: benchmark_results_20260322_142856.csv  benchmark_summary_20260322_142856.csv
data/outputs/comparison_summaries/: multiseed_dqn_qrdqn_summary.csv  multiseed_dqn_qrdqn_summary.xlsx
data/outputs/multiseed_benchmark/: multiseed_test_detailed_20260323_112714.csv  multiseed_test_detailed_20260323_112714_DQN.xlsx  multiseed_test_detailed_20260323_113509.csv  multiseed_test_detailed_20260323_113509_QRDQN.xlsx  multiseed_test_summary_20260323_112714.csv  multiseed_test_summary_20260323_112714.xlsx  multiseed_test_summary_20260323_113509.csv  multiseed_test_summary_20260323_113509.xlsx
data/outputs/scenario_analysis/: scenario_summary_20260322_164844.csv  scenario_summary_20260323_012552.csv  type_pair_summary_20260322_164844.csv  type_pair_summary_20260323_012552.csv
data/outputs/testset_eval/: dqn_testset_20260322_212317.csv  dqn_testset_20260322_212317.xlsx  dqn_testset_20260323_111308.csv  dqn_testset_20260323_111308.xlsx  greedy_testset_20260322_212216.csv  greedy_testset_20260322_212216.xlsx  qrdqn_testset_20260322_234144.csv  (+1 more)
data/raw/: data_unallocated_orders_fixed_outerDiameter.json  master_data_mat_type_2.sql  prodsteptype_2.sql
data/scenarios/: demo_scenario.json
src/: test.py
src/ma_rl/data/: __init__.py  (+5 more)
tests/: test_assignment_set_scoring.py  test_feasible_matches_smoke.py  test_material_allocator_env.py  test_psi_scenario_loader.py  test_scenario_loader.py  test_solve_greedy.py
(+109 files in other folders)
